# blandify

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  lefthook.yml  pixi.toml
.github/workflows/: build.yml  ci.yml
python/: Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs
python/tests/: test_blandify.py
src/: categories.rs  config.rs  lib.rs  main.rs  normalizer.rs
tests/: cli.rs  integration.rs  invariants.rs  regressions.rs
