[workspace]
members = [".", "python"]
resolver = "2"

[package]
name = "blandify"
version = "0.1.0"
edition = "2021"
description = "Unicode normalization library for stripping LLM artifacts"
license = "MIT"

[dependencies]
bitflags = "2"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
